reversewords_app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: reverse-words
  name: reverse-words
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: http
    name: http
  selector:
    app: reverse-words
  type: ClusterIP
  sessionAffinity: None
